# greentic-operax

./: .gitignore  Cargo.toml  README.md  coverage-policy.json  package-lock.json
.codex/: global_rules.md  repo_overview.md  repo_overview_task.md
.codex/done/: 13-operax-runtime-scaffold.md  14-operax-gtpack-loader.md  15-operax-sorx-http-client.md  16-operax-multitenant-team-context.md  17-operax-input-dispatcher-single-and-batch.md  18-operax-decision-envelope-policy-gate.md  19-operax-audit-jsonl.md  20-customer-pilot-tenancy-demo.md  21-ci-customer-pilot-quality-gates.md  22-operax-repo-hardening-and-release-shape.md  23-operax-test-webchat-manager.md  24-operax-test-webchat-bundle.md  25-capability-bindings.md  greentic-sorx-summary.md
.codex/done/examples/tenancy/banking/: one-transaction.json
.codex/done/schemas/: operax.decision.schema.json
.codex/examples/tenancy/banking/: daily-transactions.json
.github/workflows/: ci.yml  customer-pilot-demo.yml  nightly-coverage.yml  perf.yml  publish.yml  release-binaries.yml  release.yml
.greentic/cache/components/v1/sha256_7c6d04ea2dafa8415e19306155e36066e4d17c1f34db11d631142015915d0d70/artifacts/: sha256_26e40f4f0c10070df791cbf61fe84d8093e077ed8188a800c238f1f86a300170.cwasm  sha256_26e40f4f0c10070df791cbf61fe84d8093e077ed8188a800c238f1f86a300170.json  sha256_6c4963c76277102a2e3e3517acc18125e04896747639b62dedaffb5d5f2c0f78.json  sha256_b325d89a25229bea99e4987c41cc712dd3a0d3c6f336392facbf5a82011eb50a.cwasm  sha256_b325d89a25229bea99e4987c41cc712dd3a0d3c6f336392facbf5a82011eb50a.json  sha256_b5b2d45e530286801c3b6a1c611bf643ff8a686a4de68c87a1e41bb18d5633db.json  sha256_d0b9dc48122d081250bf8bb1cf06a309995c318ac9b0b3e6804ce8fd3639d655.cwasm  sha256_d0b9dc48122d081250bf8bb1cf06a309995c318ac9b0b3e6804ce8fd3639d655.json  sha256_f29a72bcdffe53c416c45bb348f59b35f213592de32b0cfe43d7e4574fdb530b.json
.i18n/: translator-state.json
ci/: local_check.sh  release_check.sh
crates/operax-audit/: Cargo.toml
crates/operax-audit/src/: lib.rs
crates/operax-cli/: Cargo.toml  README.md  build.rs
crates/operax-cli/i18n/: ar-AE.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SY.json  bg.json  bn.json  cs.json  en.json  fr.json  hi.json  hu.json  ja.json  lv.json  ml.json  ms.json  my.json  nl.json  pa.json  qu.json  ru.json  sv.json  ta.json  te.json  tr.json  uk.json  vi.json
crates/operax-cli/src/: lib.rs  main.rs  test_runtime.rs
crates/operax-cli/tests/: customer_pilot_demo.rs  landlord_tenant_bulk_fixture.rs
crates/operax-core/: Cargo.toml
crates/operax-core/src/: lib.rs
crates/operax-dispatch/: Cargo.toml
crates/operax-dispatch/src/: lib.rs
crates/operax-manager/: Cargo.toml
crates/operax-manager/src/: lib.rs
crates/operax-pack-loader/: Cargo.toml
crates/operax-pack-loader/src/: lib.rs
crates/operax-policy/: Cargo.toml
crates/operax-policy/src/: lib.rs
crates/operax-runtime/: Cargo.toml
crates/operax-runtime/src/: bulk_ingest.rs  lib.rs
crates/operax-sorx-http/: Cargo.toml
crates/operax-sorx-http/src/: lib.rs
examples/bulk-ingest/: landlord-tenant-batch.json
examples/tenancy/: README.md
examples/tenancy/handoff/: operala-handoff.json  operala.yaml
examples/tenancy/handoff/flows/: ingest-daily-transactions.flow.yaml  ingest-transaction.flow.yaml
examples/tenancy/handoff/schemas/: bank-transaction.schema.json  daily-bank-transactions.schema.json
examples/tenancy/mock-sorx/: README.md
examples/tenancy/sorx-fixtures/: initial-state.json
i18n/: ar-DZ.json  ar-SD.json  ar-TN.json  ar.json  ay.json  da.json  de.json  el.json  en-GB.json  es.json  et.json  fa.json  fi.json  gn.json  gu.json  hr.json  ht.json  id.json  it.json  km.json  kn.json  ko.json  lo.json  lt.json  mr.json  nah.json  ne.json  no.json  pl.json  pt.json  ro.json  si.json  sk.json  sr.json  th.json  tl.json  ur.json  zh.json
scripts/: local_check.sh  test_operax.sh
tools/: i18n.sh  sync_cli_i18n.sh
