[package]
name = "operax-core"
version.workspace = true
edition.workspace = true
rust-version = "1.95"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
