[package]
name = "operax-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
operax-core.workspace = true
operax-pack-loader.workspace = true
operax-runtime.workspace = true
operax-sorx-http.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
