[package]
name = "operax-sorx-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
operax-core.workspace = true
serde.workspace = true
serde_json.workspace = true
